CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.59 2002/11/25 08:43:23 ballen4705 Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/

Maintainers/Developers Key:
[BA} Bruce Allen            <smartmontools-support@lists.sourceforge.net>
[EB] Erik Inge Bolso        <knan@mo.himolde.no>
[SB] Stanislav Brabec       <sbrabec@suse.cz>
[FM] Frederic L. W. Meunier <0@pervalidus.net>
[PW} Phil Williams          <phil@subbacultcha.demon.co.uk>

NOTES FOR FUTURE RELEASES: see TODO file.

CURRENT RELEASE (see VERSION file in this directory):

  [BA] smartctl: modified so that arguments could have either a single -
  as in -ea or multiple ones as in -e -a.  Improved warning message for
  device not opened, and fixed error in redirection of error output of
  HD identity command.

  [PW] smartd: added support for long options.  All short options are still
  supported; see manpage for available long options.

  [BA] smartctl.  When raw Attribute value was 2^31 or larger, did
  not print correctly.

smartmontools-5.0.46

  [BA] smartd: added smartd.conf Directives -T and -s.  The -T Directive
  enables/disables Automatic Offline Testing.  The -s Directive
  enables/disables Attribute Autosave. Documentation and