@@ -1,6 +1,6 @@
 CHANGELOG for smartmontools
 
-$Id: CHANGELOG,v 1.59 2002/11/25 08:43:23 ballen4705 Exp $
+$Id: CHANGELOG,v 1.60 2002/11/27 13:58:30 ballen4705 Exp $
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
@@ -30,6 +30,14 @@ Maintainers/Developers Key:
 NOTES FOR FUTURE RELEASES: see TODO file.
 
 CURRENT RELEASE (see VERSION file in this directory):
+
+  [BA] smartctl: The -O option to enable an Immediate off-line test
+  did not print out the correct time that the test would take to
+  complete.  This is because the test timer is volatile and not
+  fixed.  This has been fixed, and the smartctl.8 man page has been
+  updated to explain how to track the Immediate offline test as it
+  progresses, and to further emphasize the differences between the
+  off-line immediate test and the self-tests.
 
   [BA] smartctl: modified so that arguments could have either a single -
   as in -ea or multiple ones as in -e -a.  Improved warning message for
